# blueressearch

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/deployments/jobs/: extractors.py  jetstream.py  main_openai.py  main_sentence_transformers.py  seed.py
backend/deployments/resumes/: extractors.py  jetstream.py  main_openai.py  main_sentence_transformers.py  seed.py
backend/docsearch/: README.md  database.py  factory.py  main.py  tables.py
backend/docsearch/api/: admin.py  dependencies.py  documents.py  extractors.py  schemas.py  search.py
backend/docsearch/core/: embedder.py  extractor.py  registry.py
backend/docsearch/embedders/: openai.py  sentence_transformer.py
backend/infra/: Caddyfile  jobs-api.service  resumes-api.service
backend/jetstream/: README.md  __init__.py  cli.py  docsearch_api.py  ingester.py  jobs.yaml.example  resumes.yaml.example
frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/match-and-edit-doc-doc/: page.tsx
frontend/src/components/: InfoTooltip.tsx  NavDropdown.tsx  SaveToPDS.tsx
frontend/src/config/: backends.ts  server-backends.ts
frontend/src/hooks/: useRefineResume.ts
frontend/src/lib/: ai-utils.ts  api.ts  atproto.ts  auth.ts  did.ts  features.ts  limits.ts  oauth.ts  pds-actions.ts  prisma.ts  refine-resume-helper.ts  text-to-job-post.ts  text-to-resume.ts  usage.ts
frontend/src/types/: api.ts  documents.ts
(+45 files in other folders)
